Fixed cubegrid, button backgrounds, dialog breaking when scrolled to the bottom, issues on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,20 @@
   font-display: swap;
 }
 
+/* FIX FOR SAFARI MOBILE BROWSERS */
+html,
+body {
+  height: 100%;
+  height: -webkit-fill-available;
+  overflow-x: hidden;
+}
+
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+/* --- */
+
 html {
   scroll-behavior: smooth;
   background-color: #1a1a1a;
